RESOLVED FIXED305632
[GTK] Web process translatable strings are not in system locale
https://bugs.webkit.org/show_bug.cgi?id=305632
Summary [GTK] Web process translatable strings are not in system locale
Carlos Garcia Campos
Reported 2026-01-16 03:37:34 PST
This is because we no longer call gtk_init from the web process, that called setlocale for us. Now we need to explicit call setlocale to use the system locale.
Attachments
Carlos Garcia Campos
Comment 1 2026-01-16 03:39:14 PST
EWS
Comment 2 2026-01-19 00:56:35 PST
Committed 305801@main (83dcbbf140b0): <https://commits.webkit.org/305801@main> Reviewed commits have been landed. Closing PR #56703 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.