[GTK] Web process translatable strings are not in system locale https://bugs.webkit.org/show_bug.cgi?id=305632

Reviewed by Michael Catanzaro.

This is because we no longer call gtk_init() from the web process, that
called setlocale() for us. Now we need to explicit call setlocale() to use
the system locale.

* Source/WebKit/WebProcess/gtk/WebProcessMainGtk.cpp:

Canonical link: https://commits.webkit.org/305801@main